--- a/carrousel/index.html
+++ b/carrousel/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Carrousel</title>
-</head>
-<body>
-    <header class="bg-dark p-4 text-white">
-        <h1 class="text-center">Galerie d'inspiration </h1> 
-    </header>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport"
+			content="width=device-width, initial-scale=1.0">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+        <script src="script.js" defer></script>
+		<title>Carrousel</title>
+	</head>
+	<body>
+		<header class="bg-dark p-4 text-white">
+			<h1 class="text-center">
+				Galerie d'inspiration
+			</h1>
+		</header>
 
-    <button class="toolbar-toggle btn btn-outline-success mt-5">
-        Afficher/Cacher
-    </button>
 
-    <div class="text-center" id="toolbar">
-        <button id="slider-previous"><i class="fa-solid fa-backward"></i></button>
-        <button id="slider-toggle"><i class="fa-solid fa-play"></i></button>
-        <button id="slider-next"><i class="fa-solid fa-forward"></i></button>
-        <button id="slider-random"><i class="fa-solid fa-random"></i></button>
+		<button class="toolbar-toggle btn btn-outline-success mt-5">Afficher/Cacher</button>
 
-        <figure id="slider">
-            <img src="img/image.png" alt="efrei">
-            <figcaption>Titre de l'image</figcaption>
-        </figure>
 
-    </div>
-    
-</body>
+		<div class="text-center" id="toolbar">
+			<button id="slider-previous">
+				<i class="fa-solid fa-backward"></i>
+			</button>
+			<button id="slider-toggle">
+				<i class="fa-solid fa-play"></i>
+			</button>
+			<button id="slider-next">
+				<i class="fa-solid fa-forward"></i>
+			</button>
+			<button id="slider-random">
+				<i class="fa-solid fa-random"></i>
+			</button>
+		</div>
+
+		<figure id="slider"  class="text-center">
+			<img src="img/image.png"
+				alt="efrei">
+			<figcaption>Titre de l'image</figcaption>
+		</figure>
+
+
+
+	</body>
 </html>
