carrousel event click

--- a/carrousel/index.html
+++ b/carrousel/index.html
@@ -20,7 +20,7 @@
 		<button class="toolbar-toggle btn btn-outline-success mt-5">Afficher/Cacher</button>
 
 
-		<div class="text-center" id="toolbar">
+		<div class="text-center mb-4" id="toolbar">
 			<button id="slider-previous">
 				<i class="fa-solid fa-backward"></i>
 			</button>
@@ -36,9 +36,8 @@
 		</div>
 
 		<figure id="slider"  class="text-center">
-			<img src="img/image.png"
-				alt="efrei">
-			<figcaption>Titre de l'image</figcaption>
+			<img src="" alt="efrei">
+			<figcaption></figcaption>
 		</figure>
 
 
